--- a/config/test.cfg
+++ b/config/test.cfg
@@ -5,3 +5,4 @@ ASSETS_DEBUG=True
 SQLALCHEMY_DATABASE_URI="sqlite:///var/test.db"
 SECRET_KEY="test"
 
+SCHEDULE_URL="https://frab.emfcamp.org/en/EMF2014/public/events.json"
