Added notify ability via dm

--- a/config/live.cfg
+++ b/config/live.cfg
@@ -6,3 +6,5 @@ SQLALCHEMY_DATABASE_URI="postgresql://tilda:tilda@localhost/schedule"
 SECRET_KEY="test"
 
 SCHEDULE_URL="https://frab.emfcamp.org/en/EMF2014/public/events.json"
+
+DM_PATH="./dm.py"
