Added twilio to notification methods, got basic notifications working

--- a/config/live.cfg
+++ b/config/live.cfg
@@ -8,3 +8,7 @@ SECRET_KEY="test"
 SCHEDULE_URL="https://frab.emfcamp.org/en/EMF2014/public/events.json"
 
 DM_PATH="./dm.py"
+
+TWILIO_ACCOUNT_SID = "AC741576a155b88d1c9d180b912be0b95c"
+TWILIO_AUTH_TOKEN = "INSERT_AUTH_TOKEN_HERE"
+TWILIO_FROM_NUMBER = "+441253530363"
